@@ -159,8 +159,16 @@ init|=
 operator|new
 name|CacheOnLargeSegments
 argument_list|(
+literal|10000
+argument_list|,
 literal|0.03f
 argument_list|)
+decl_stmt|;
+DECL|field|minIndexSize
+specifier|private
+specifier|final
+name|int
+name|minIndexSize
 decl_stmt|;
 DECL|field|minSizeRatio
 specifier|private
@@ -168,11 +176,14 @@ specifier|final
 name|float
 name|minSizeRatio
 decl_stmt|;
-comment|/**      * Create a {@link CacheOnLargeSegments} instance that only caches on a      * given segment if its number of documents divided by the total number of      * documents in the index is greater than or equal to      *<code>minSizeRatio</code>.      */
+comment|/**      * Create a {@link CacheOnLargeSegments} instance that only caches on a      * given segment if the total number of documents in the index is greater      * than {@code minIndexSize} and the number of documents in the segment      * divided by the total number of documents in the index is greater than      * or equal to {@code minSizeRatio}.      */
 DECL|method|CacheOnLargeSegments
 specifier|public
 name|CacheOnLargeSegments
 parameter_list|(
+name|int
+name|minIndexSize
+parameter_list|,
 name|float
 name|minSizeRatio
 parameter_list|)
@@ -198,6 +209,12 @@ name|minSizeRatio
 argument_list|)
 throw|;
 block|}
+name|this
+operator|.
+name|minIndexSize
+operator|=
+name|minIndexSize
+expr_stmt|;
 name|this
 operator|.
 name|minSizeRatio
@@ -243,6 +260,23 @@ argument_list|(
 name|context
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|topLevelContext
+operator|.
+name|reader
+argument_list|()
+operator|.
+name|maxDoc
+argument_list|()
+operator|<
+name|minIndexSize
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
 specifier|final
 name|float
 name|sizeRatio
