@@ -231,6 +231,8 @@ name|QueryCachingPolicy
 operator|.
 name|CacheOnLargeSegments
 argument_list|(
+literal|0
+argument_list|,
 name|minSizeRatio
 argument_list|)
 decl_stmt|;
@@ -264,12 +266,6 @@ literal|"value"
 argument_list|)
 argument_list|)
 argument_list|)
-decl_stmt|;
-specifier|final
-name|DocIdSet
-name|set
-init|=
-literal|null
 decl_stmt|;
 specifier|final
 name|boolean
@@ -311,6 +307,52 @@ operator|>=
 name|minSizeRatio
 argument_list|,
 name|shouldCache
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|QueryCachingPolicy
+operator|.
+name|CacheOnLargeSegments
+argument_list|(
+name|numDocs
+argument_list|,
+name|Float
+operator|.
+name|MIN_VALUE
+argument_list|)
+operator|.
+name|shouldCache
+argument_list|(
+name|filter
+argument_list|,
+name|ctx
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+operator|new
+name|QueryCachingPolicy
+operator|.
+name|CacheOnLargeSegments
+argument_list|(
+name|numDocs
+operator|+
+literal|1
+argument_list|,
+name|Float
+operator|.
+name|MIN_VALUE
+argument_list|)
+operator|.
+name|shouldCache
+argument_list|(
+name|filter
+argument_list|,
+name|ctx
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
